# mini_qwen35moe

./: .gitignore  CMakeLists.txt  README.md  main.cpp
api/: http_server.cpp  http_server.h  routes.cpp  routes.h
bindings/: pybind_module.cpp
build-cpu/: compile_commands.json
build_test/: compile_commands.json
compute/: ops_cpu.cpp  ops_cpu.hpp
core/: config.hpp  gguf_reader.cpp  gguf_reader.h  gguf_reader.hpp
graph/: deltanet_state.cpp  deltanet_state.h  graph.cpp  graph.h  kv_cache_simple.cpp  kv_cache_simple.h  mtp.cpp  paged_kv_cache_test.cpp  turboquant.cpp  turboquant.h
model/: common.cpp  common.h  dev_defaults.cpp  dev_defaults.h  gguf_mmap.cpp  gguf_mmap.h  loader.cpp  loader.hpp  metadata.cpp  metadata.h  model.cpp  model.h  model.hpp  tensor_override.cpp  tensor_override.h  weights.cpp  weights.h  weights.hpp
pipeline/: chat.cpp  chat.h  chat_template.cpp  chat_template.h  context_limit.h  context_limit_test.cpp  generator.hpp  inference.cpp  inference.h  inference.hpp  recognizer.hpp  sampling.cpp  sampling.h  tokenizer.cpp  tokenizer.h  tokenizer.hpp  unicode.cpp
scripts/: verify_mixed_mode.sh
tests/: README.md  lib.sh
tests/functional/: test_matrix.sh
tests/perf/: bench.py  bench_main.cpp  run_bench.sh  run_bench_cpp.sh
web/: index.html
